Time ago in words

--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -143,15 +143,18 @@ es:
       second: "Segundo"
 
   helpers:
+    submit:
+      vitamin:
+        create: "Crear vitamina"
+      create: 'Crear %{model}'
+      update: 'Actualizar %{model}'
+      submit: 'Guardar %{model}'
     select:
       # Default value for :prompt => true in FormOptionsHelper
       prompt: "Por favor selecciona"
 
     # Default translation keys for submit FormHelper
-    submit:
-      create: 'Crear %{model}'
-      update: 'Actualizar %{model}'
-      submit: 'Guardar %{model}'
+    
   
   
   ########
