--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -192,6 +192,7 @@ es:
       less_than_or_equal_to: "debe ser menor o igual que %{count}"
       odd: "debe ser impar"
       even: "debe ser par"
+      email_format: "no es un correo válido"
   
   
   
@@ -239,6 +240,7 @@ es:
   
   ########
   # Active Record
+  
   activerecord:
     models:
       book: Libro
