--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -212,8 +212,9 @@ es:
   time:
     formats:
       short: "%d de %b a las %H:%M hrs"
-      default: "%a, %d de %b de %Y a las %H:%M:%S %Z"
+      default: "%d de %B de %Y"
       long: "%A, %d de %B de %Y a las %I:%M %p"
+      big: "%a, %d de %b de %Y a las %H:%M:%S %Z"
     am: "am"
     pm: "pm"
 
